--- a/wordpress.workflow.yml
+++ b/wordpress.workflow.yml
@@ -1,5 +1,5 @@
 on: push
-name: 🚀 Deploy website on push
+name: 🚀 Deploy wordpress website on push
 jobs:
   web-deploy:
     name: 🎉 Deploy
@@ -7,10 +7,11 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
-    
+
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp.samkirkland.com
-        username: myFtpUserName
-        password: ${{ secrets.ftp_password }}
+        server: mssolutions.com.ng
+        username: mssolutionsftp@mssolutions.com.ng
+        password: y%eh,ua4.@#L
+        server-dir: public_html/ercaspay/
